--- a/logistics/index.html
+++ b/logistics/index.html
@@ -74,9 +74,8 @@
 
 <!-- 地址 -->
 <div style="text-align: center;">
-<iframe src="https://www.google.com/maps/d/embed?mid=1IEvhkYT_t8TSUnMY5DF2wUsZNyjhu6k&ehbc=2E312F" width="800" height="480"></iframe>
+<iframe src="https://www.google.com/maps/d/embed?mid=1FVkxMhtwQNeyY2hJpx1BTiMXN65JcJ0&ehbc=2E312F" width="640" height="480"></iframe>
 </div>
-<!-- 地址 -->
 
 <p>For participants, we highly recommend to take a taxi to get from airports/railway stations to the hotel. 
   Rough estimates of time and cost are listed below:</p>
@@ -123,10 +122,10 @@
     <thead>
       <tr>
         <th style="border: 1px solid black; text-align: center; font-weight: bold;">Room Type</th>
-        <th style="border: 1px solid black; text-align: center; font-weight: bold;">8.25</th>
-        <th style="border: 1px solid black; text-align: center; font-weight: bold;">8.26</th>
-        <th style="border: 1px solid black; text-align: center; font-weight: bold;">8.27</th>
-        <th style="border: 1px solid black; text-align: center; font-weight: bold;">8.28</th>
+        <th style="border: 1px solid black; text-align: center; font-weight: bold;">8.25(RMB)</th>
+        <th style="border: 1px solid black; text-align: center; font-weight: bold;">8.26(RMB)</th>
+        <th style="border: 1px solid black; text-align: center; font-weight: bold;">8.27(RMB)</th>
+        <th style="border: 1px solid black; text-align: center; font-weight: bold;">8.28(RMB)</th>
       </tr>
     </thead>
     <tbody>
@@ -152,7 +151,7 @@
   If you have special dietary requirements that the typical hotel buffet may not meet, 
   please indicate this in the registration form or contact us via email(<a href="mailto:mailto:epf2025@163.com">epf2025@163.com</a>).</p>
 
-<h2>Lijiang Astronomical Observation Base (Southern Base)</h2>
+<h2>Lijiang Astronomical Observation Base <a href="https://ynao.cas.cn/jgsz/gcjd/202307/t20230718_6811895.html">(Southern Base)</a></h2>
 <p>The Southern Base of Yunnan Observatories (CAS), located in Lijiang, 
   includes the Gaomeigu Observation Area (3,200m altitude) and Yulong County. 
   As a key optical astronomy hub in southern China, it benefits from low latitude, 
@@ -161,17 +160,48 @@
   and the 1.8-meter collaborative telescope.</p>
 <p>Notable achievements include discovering a bright early-universe quasar (redshift 6.3),
   identifying 300+ supernovae, and publishing hundreds of studies on black holes and stellar evolution.</p>
-<p>picture</p>
+
+<!-- 天文台图片 -->
+<div style="text-align: center;">
+<img src="../img/lijiang.jpg"  width="640" height="400" />
+<figcaption>Lijiang 2.4m Telescope under the Milky Way</figcaption>
+</div>
+<!-- 天文台图片 -->
 
 <h2>Excursion</h2>
 <p>Lijiang is a beautiful and culturally rich city situated in the northwest of Yunnan Province, China. 
   Although we do not offer organized excursion trips, here are some of the top destinations you can explore from Lijiang:</p>
 
+<!-- 图片 -->
+<div style="text-align: center;">
+<img src="../img/17691743657418_.pic_hd.jpg"  width="730" height="400" />
+<figcaption><a href="https://en.wikipedia.org/wiki/Jade_Dragon_Snow_Mountain">Jade Dragon Snow Mountain</a></figcaption>
+<figcaption>玉龙雪山</figcaption>
+</div>
+<!-- 图片 -->
+
+<!-- 图片并排 -->
+<div style="display: flex; justify-content: center; gap: 50px;">
+  <div style="text-align: center;">
+    <img src="../img/17651743657405_.pic_hd.jpg" width="340" height="470" />
+    <figcaption><a href="https://en.wikipedia.org/wiki/Black_Dragon_Pool">Black Dragon Pool</a></figcaption>
+    <figcaption>黑龙潭</figcaption>
+  </div>
+  
+  <div style="text-align: center;">
+    <img src="../img/17681743657415_.pic_hd.jpg" width="340" height="470" />
+    <figcaption><a href="https://en.wikipedia.org/wiki/Old_Town_of_Lijiang">Old Town of Lijiang</a></figcaption>
+    <figcaption>丽江古镇</figcaption>
+  </div>
+</div>
+<!-- 图片并排 -->
+
+
 <h2>Google service</h2>
 <p>Google service is not available in mainland China without a valid VPN. 
   If your life and work heavily rely on google products (email, map, etc), 
   please identify and set up a good VPN service before arrival. 
-  You may also find some local alternatives (e.g., Wechat ,Baidu map, etc) if needed.</p>
+  You may also find some local alternatives (e.g., <a href="https://www.wechat.com/">Wechat</a> ,<a href="https://map.baidu.com/@12648748,2540919,13z">Baidu map</a>, etc) if needed.</p>
 
 <h2>Payment Methods in China</h2>
 <p>Credit cards may not be accepted in many occasions, especially taxi and grocery stores.
@@ -179,7 +209,7 @@
   may try to set up mobile payment on your phone, as it is very popular in China and can
   cover almost all the occasions you may encounter. There are two app payment giants in
   China, Tencent's WeChat and Alibaba's Alipay, with the latter perhaps more friendly to
-  foreign visitors. Through Alipay Tour Pass, you can easily set up mobile payment and
+  foreign visitors. Through <a href="https://www.chinatraveldestination.com/alipay-tour-pass/">Alipay Tour Pass</a>, you can easily set up mobile payment and
   pay through your phone.</p>
 
 <h2>Visa information</h2>
