--- a/logistics/index.html
+++ b/logistics/index.html
@@ -74,7 +74,7 @@
 
 <!-- 地址 -->
 <div style="text-align: center;">
-<iframe src="https://www.google.com/maps/d/embed?mid=1FVkxMhtwQNeyY2hJpx1BTiMXN65JcJ0&ehbc=2E312F" width="640" height="480"></iframe>
+  <iframe src="https://www.google.com/maps/d/embed?mid=1FVkxMhtwQNeyY2hJpx1BTiMXN65JcJ0&ehbc=2E312F" width="640" height="480"></iframe>
 </div>
 
 <p>For participants, we highly recommend to take a taxi to get from airports/railway stations to the hotel. 
@@ -173,9 +173,9 @@
   Although we do not offer organized excursion trips, here are some of the top destinations you can explore from Lijiang:</p>
 
 <!-- 图片 -->
-<div style="text-align: center;">
+<div style="text-align: center; margin-bottom: 50px;">
 <img src="../img/17691743657418_.pic_hd.jpg"  width="730" height="400" />
-<figcaption><a href="https://en.wikipedia.org/wiki/Jade_Dragon_Snow_Mountain">Jade Dragon Snow Mountain</a></figcaption>
+<figcaption><a href="https://en.wikipedia.org/wiki/Jade_Dragon_Snow_Mountain">Yulong Snow Mountain</a></figcaption>
 <figcaption>玉龙雪山</figcaption>
 </div>
 <!-- 图片 -->
@@ -247,10 +247,10 @@
 <script type="application/javascript">
 var doNotTrack = false;
 if (!doNotTrack) {
-	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-	ga('create', 'UA-11936482-16', 'auto');
-	
-	ga('send', 'pageview');
+  window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+  ga('create', 'UA-11936482-16', 'auto');
+  
+  ga('send', 'pageview');
 }
 </script>
 <script async src='https://www.google-analytics.com/analytics.js'></script>
