--- a/report_poster/index.html
+++ b/report_poster/index.html
@@ -64,8 +64,8 @@
 </table>
 <!-- 主菜单 -->
 
-
 <!-- 提交报告 -->
+<div style="background-color: white;">
 <form action="https://formspree.io/f/movjlzor" method="POST">
 <h3>Submit your abstract of report: </h3>
 
@@ -87,14 +87,16 @@
 <button type="submit" style="background-color: transparent; border: none; color: #4b719f; font-size: 30px;">
 Click here to submit
 </button>
-
+</form>
+</div>
 <!-- 可选：文件上传
   <label for="attachment">附件：</label>
-  <input type="file" id="attachment" name="attachment"> 
--->
-
-</form>
+  <input type="file" id="attachment" name="attachment"> -->
 <!-- 提交报告 -->
+
+
+
+
 
 <!-- 海报相关 -->
 <h3>Here will show the details about poster.</h3>
