--- a/registration/index.html
+++ b/registration/index.html
@@ -115,6 +115,125 @@
 <strong>Registration fees are non-refundable.</strong> 
 </p>
 
+<!-- 住宿信息 -->
+<h2>Dining & Accommodation</h2>
+<p>Hotel rooms have been reserved at Lijiang Guanfang Hotel at the following prices. 
+  In the registration form, you will be asked to provide your arrival and departure dates, 
+  choose the room type, and whether you want to share a room with someone else. 
+  If there are changes you want to make after the registration, 
+  please contact us via email(<a href="mailto:mailto:epf2025@163.com">epf2025@163.com</a>).</p>
+  <table border="1" cellspacing="0" cellpadding="6" style="border-collapse: collapse; width: 100%;">
+    <thead>
+      <tr>
+        <th style="border: 1px solid black; text-align: center; font-weight: bold;">Room Type</th>
+        <th style="border: 1px solid black; text-align: center; font-weight: bold;">8.25(RMB)</th>
+        <th style="border: 1px solid black; text-align: center; font-weight: bold;">8.26(RMB)</th>
+        <th style="border: 1px solid black; text-align: center; font-weight: bold;">8.27(RMB)</th>
+        <th style="border: 1px solid black; text-align: center; font-weight: bold;">8.28(RMB)</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td style="border: 1px solid black; text-align: center;">Superior King Bed Room</td>
+        <td style="border: 1px solid black; text-align: center;">380</td>
+        <td style="border: 1px solid black; text-align: center;">380</td>
+        <td style="border: 1px solid black; text-align: center;">380</td>
+        <td style="border: 1px solid black; text-align: center;">380</td>
+      </tr>
+      <tr>
+        <td style="border: 1px solid black; text-align: center;">Superior Twin Bed Room</td>
+        <td style="border: 1px solid black; text-align: center;">480</td>
+        <td style="border: 1px solid black; text-align: center;">480</td>
+        <td style="border: 1px solid black; text-align: center;">480</td>
+        <td style="border: 1px solid black; text-align: center;">480</td>
+      </tr>
+    </tbody>
+  </table>
+  
+<p>The above price includes breakfast for two people. 
+  Lunches and dinners are included in the registration fee and served in the buffet style at the hotel. 
+  If you have special dietary requirements that the typical hotel buffet may not meet, 
+  please indicate this in the registration form or contact us via email(<a href="mailto:mailto:epf2025@163.com">epf2025@163.com</a>).</p>
+
+<!-- 住宿信息 -->
+
+<!-- 住宿表格 -->
+<!-- <div style="background-color: white;">
+<form action="https://formspree.io/f/mjkypvbw"  method="POST">
+<h3>Submit your request about hotel: </h3>
+
+<label for="name">Name: </label>
+<input type="text" id="name" name="name" style="border: 2px solid #4b719f; padding: 5px; border-radius: 4px;" required>
+
+<label for="email">E-mail: </label>
+<input type="email" id="email" name="email" style="border: 2px solid #4b719f; padding: 5px; border-radius: 4px;" required>
+
+<label for="title">Report title: </label>
+<input type="title" id="title" name="title" style="width: 300px; border: 2px solid #4b719f; padding: 5px; border-radius: 4px;" required>
+<br>
+
+<label for="report">Abstract: </label><br>
+<textarea id="report" name="report" rows="10" cols="120" style="border: 2px solid #4b719f; padding: 5px; border-radius: 4px;" required></textarea>
+<br>
+<br>
+
+<button type="submit" style="background-color: transparent; border: none; color: #4b719f; font-size: 30px;">
+Click here to submit
+</button>
+</form>
+</div> -->
+<!-- 住宿表格 -->
+
+
+<div style="background-color: white;">
+    <form action="https://formspree.io/f/mjkypvbw"  method="POST">
+<table>
+    <tr>
+      <td>Full Name</td>
+      <td colspan="2"><input type="text" name="name" required></td>
+      
+      <td>Gender</td>
+      <td>
+        <label class="checkbox-group"><input type="checkbox" name="gender" value="male" required>Male</label>
+        <label class="checkbox-group"><input type="checkbox" name="gender" value="female" required>Female</label>
+      </td>
+    </tr>
+
+    <tr>
+        <td>Affiliation</td>
+        <td colspan="2"><input type="text" name="affiliation" required></td>
+
+      <td>Phone</td>
+      <td><input type="tel" name="phone" required></td>
+    </tr>
+
+
+    <tr>
+      <td>Email</td>
+      <td colspan="4"><input type="email" name="email" required></td>
+    </tr>
+
+    <tr>
+      <td>Accommodation</td>
+      <td colspan="4">
+        <label class="checkbox-group"><input type="checkbox" name="stay" value="single" required>Single Room</label>
+        <label class="checkbox-group"><input type="checkbox" name="stay" value="shared" required>Shared Room</label>
+      </td>
+    </tr>
+
+    <tr>
+      <td>Check-in Date</td>
+      <td><input type="date" name="checkin" required></td>
+      <td>Check-out Date</td>
+      <td colspan="2"><input type="date" name="checkout" required></td>
+    </tr>
+  </table>
+<button type="submit" style="background-color: transparent; border: none; color: #4b719f; font-size: 30px;">
+Click here to submit
+</button>
+</form>
+</div>
+
 <!-- 日期提醒 -->
 <h2 style="color: gray;">Pre-registration: </h2>
 <h2 style="color: gray;">Abstract Submission: </h2>
