--- a/registration/index.html
+++ b/registration/index.html
@@ -194,8 +194,8 @@ Click here to submit
       
       <td>Gender</td>
       <td>
-        <label class="checkbox-group"><input type="checkbox" name="option" value="male" required>Male</label>
-        <label class="checkbox-group"><input type="checkbox" name="option" value="female" required>Female</label>
+        <label class="checkbox-group"><input type="radio" name="option" value="male" required>Male</label>
+        <label class="checkbox-group"><input type="radio" name="option" value="female" required>Female</label>
       </td>
     </tr>
 
