--- a/registration/index.html
+++ b/registration/index.html
@@ -216,8 +216,8 @@ Click here to submit
     <tr>
       <td>Accommodation</td>
       <td colspan="4">
-        <label class="checkbox-group"><input type="checkbox" name="stay" value="single" required>Single Room</label>
-        <label class="checkbox-group"><input type="checkbox" name="stay" value="shared" required>Shared Room</label>
+        <label class="checkbox-group"><input type="radio" name="option" value="single" required>Single Room</label>
+        <label class="checkbox-group"><input type="radio" name="option" value="shared" required>Shared Room</label>
       </td>
     </tr>
 
