--- a/registration/index.html
+++ b/registration/index.html
@@ -194,8 +194,8 @@ Click here to submit
       
       <td>Gender</td>
       <td>
-        <label class="checkbox-group"><input type="radio" name="option" value="male" required>Male</label>
-        <label class="checkbox-group"><input type="radio" name="option" value="female" required>Female</label>
+        <label class="checkbox-group" for="male"><input type="radio" id="male" name="gender" value="male" required>Male</label>
+        <label class="checkbox-group" for="female"><input type="radio" id="female" name="gender" value="female" required>Female</label>
       </td>
     </tr>
 
@@ -216,8 +216,8 @@ Click here to submit
     <tr>
       <td>Accommodation</td>
       <td colspan="4">
-        <label class="checkbox-group"><input type="radio" name="option" value="single" required>Single Room</label>
-        <label class="checkbox-group"><input type="radio" name="option" value="shared" required>Shared Room</label>
+        <label class="checkbox-group" for="single"><input type="radio" id="single" name="hotel" value="single" required>Single Room</label>
+        <label class="checkbox-group" for="shared"><input type="radio" id="shared" name="hotel" value="shared" required>Shared Room</label>
       </td>
     </tr>
 
