--- a/registration/index.html
+++ b/registration/index.html
@@ -190,7 +190,7 @@ Click here to submit
 <table>
     <tr>
       <td>Full Name</td>
-      <td colspan="2"><input type="text" name="name" required></td>
+      <td><input type="text" name="name" style="border: 2px solid #4b719f; padding: 5px; border-radius: 4px;" required></td>
       
       <td>Gender</td>
       <td>
@@ -201,16 +201,16 @@ Click here to submit
 
     <tr>
         <td>Affiliation</td>
-        <td colspan="2"><input type="text" name="affiliation" required></td>
+        <td><input type="text" name="affiliation" style="border: 2px solid #4b719f; padding: 5px; border-radius: 4px;" required></td>
 
       <td>Phone</td>
-      <td><input type="tel" name="phone" required></td>
+      <td><input type="tel" name="phone" style="border: 2px solid #4b719f; padding: 5px; border-radius: 4px;" required></td>
     </tr>
 
 
     <tr>
       <td>Email</td>
-      <td colspan="4"><input type="email" name="email" required></td>
+      <td><input type="email" name="email" style="border: 2px solid #4b719f; padding: 5px; border-radius: 4px;" required></td>
     </tr>
 
     <tr>
@@ -229,7 +229,7 @@ Click here to submit
     </tr>
   </table>
 <button type="submit" style="background-color: transparent; border: none; color: #4b719f; font-size: 30px;">
-Click here to submit
+Submit
 </button>
 </form>
 </div>
