--- a/registration/index.html
+++ b/registration/index.html
@@ -184,7 +184,7 @@ Click here to submit
 </div> -->
 <!-- 住宿表格 -->
 
-
+<h3>Submit your request about hotel: </h3>
 <div style="background-color: white;">
     <form action="https://formspree.io/f/mjkypvbw"  method="POST">
 <table>
