--- a/registration/index.html
+++ b/registration/index.html
@@ -229,7 +229,7 @@ Click here to submit
     </tr>
   </table>
 <button type="submit" style="background-color: transparent; border: none; color: #4b719f; font-size: 30px;">
-Submit
+Click here to submit
 </button>
 </form>
 </div>
