--- a/report_poster/index.html
+++ b/report_poster/index.html
@@ -80,7 +80,7 @@
 <br>
 
 <label for="report">Abstract: </label><br>
-<input id="report" name="report" style="width: 900px; height: 300px; border: 2px solid #4b719f; padding: 5px; border-radius: 4px;" required>
+<input type="abstract" id="abstract" name="abstract" style="width: 900px; height: 300px; border: 2px solid #4b719f; padding: 5px; border-radius: 4px;" required>
 <br>
 <br>
 
