--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <span class="year">2025</span>
 </div>
 
-<div class="bottom-right"> Auguest 25-28, 2025, LiJiang, Yunnan </div>
+<div class="bottom-right"> August 25-28, 2025, Lijiang, Yunnan </div>
 </div>
 <!-- 主标题 -->
 
