--- a/index.html
+++ b/index.html
@@ -91,36 +91,34 @@ Formation Workshop 2023" held at Beijing.</p>
 
 <!-- 邀请报告 -->
 <h2> Confirmed Speakers </h2>
-<!-- <div class="two-column-layout">
+<div class="two-column-layout">
       <div>
         <ul style="width: 100%;">
-          <li>Eugene Chiang (Berkeley)</li>
-          <li>Ruobing Dong (UVictoria)</li>
-          <li>Fei Dai (Caltech)</li>
-          <li>Min Fang (PMO)</li>
-          <li>Fabo Feng (TDLI)</li>
-          <li>Yuri Fujii (Kyoto)</li>
-          <li>Teruyuki Hirano (NAOJ)</li>
-          <li>Daniel Harsono (National Tsinghua)</li>
-          <li>Shigeru Ida (Tokyo Tech)</li>
-          <li>Dong Lai (Cornell/TDLI)</li>
+          <li>Di-Chang Chen (SYSU)</li>
+          <li>Hongping Deng (SHAO)</li>
+          <li>Jianheng Guo (YNAO)</li>
+          <li>Yukun Huang (NAOJ)</li>
+          <li>Youn-Kil Jung (KASI)</li>
+          <li>Akimasa Kataoka (NAOJ)</li>
+          <li>Yui Kawashima (Kyoto)</li>
+          <li>Beibei Liu (ZJU)</li>
+          <li>Feng Long (PKU)</li>
+          <li>Jeong-Eun Lee (SNU)</li>
         </ul>
       </div>
       <div>
         <ul style="width: 100%;">
-          <li>Min-Kai Lin (ASIAA)</li>
-          <li>Hauyu Baobab Liu (SYSU Kaohsiung)</li>
-          <li>Satoshi Okuzumi (Tokyo Tech)</li>
-          <li>Chris Ormel (Tsinghua)</li>
-          <li>Lile Wang (PKU)</li>
-          <li>Yanqin Wu (Toronto)</li>
-          <li>Ji-Wei Xie (NJU)</li>
-          <li>Fei Yan (USTC)</li>
-          <li>Jun Yang (PKU)</li>
+          <li>Ryouhei Nakatani (UNIMI)</li>
+          <li>Ryosuke Tominaga (Science Tokyo)</li>
+          <li>Shinsuke Takasao (Musashino Art)</li>
+          <li>Shang-Min Tsai (ASIAA)</li>
+          <li>Sharon Xuesong Wang (Tsinghua)</li>
+          <li>Hsi-wei Yen (ASIAA)</li>
+          <li>Wei Zhu (Tsinghua)</li>
           <li>and more to follow</li>
         </ul>
       </div>
-    </div> -->
+    </div>
 <!-- 邀请报告 -->
 
 
