--- a/program/index.html
+++ b/program/index.html
@@ -66,7 +66,7 @@
 
 
 <!-- 主内容 -->
-<h2>The program of workshop will updated after the registration close.</h2>
+<h2>An updated version of the workshop program will be released after registration concludes.</h2>
 <!-- 主内容 -->
 
 
