--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Formation Workshop 2023" held at Beijing.</p>
           <li>Ryouhei Nakatani (UNIMI)</li>
           <li>Ryosuke Tominaga (Science Tokyo)</li>
           <li>Shinsuke Takasao (Musashino Art)</li>
-          <li>Shang-Min Tsai (ASIAA)</li>
+          <li>Xianyu Tan (TDLi)</li>
           <li>Sharon Xuesong Wang (Tsinghua)</li>
           <li>Hsi-wei Yen (ASIAA)</li>
           <li>Wei Zhu (Tsinghua)</li>
