--- a/index.html
+++ b/index.html
@@ -95,21 +95,21 @@ Formation Workshop 2023" held at Beijing.</p>
       <div>
         <ul style="width: 100%;">
           <li>Di-Chang Chen (SYSU)</li>
-          <li>Hongping Deng (SHAO)</li>
+          <!-- <li>Hongping Deng (SHAO)</li> -->
           <li>Jianheng Guo (YNAO)</li>
           <li>Yukun Huang (NAOJ)</li>
           <li>Youn-Kil Jung (KASI)</li>
           <li>Akimasa Kataoka (NAOJ)</li>
-          <li>Yui Kawashima (Kyoto)</li>
+          <!-- <li>Yui Kawashima (Kyoto)</li> -->
           <li>Beibei Liu (ZJU)</li>
           <li>Feng Long (PKU)</li>
-          <li>Jeong-Eun Lee (SNU)</li>
+          <!-- <li>Jeong-Eun Lee (SNU)</li> -->
         </ul>
       </div>
       <div>
         <ul style="width: 100%;">
           <li>Ryouhei Nakatani (UNIMI)</li>
-          <li>Ryosuke Tominaga (Science Tokyo)</li>
+          <!-- <li>Ryosuke Tominaga (Science Tokyo)</li> -->
           <li>Shinsuke Takasao (Musashino Art)</li>
           <li>Xianyu Tan (TDLi)</li>
           <li>Sharon Xuesong Wang (Tsinghua)</li>
@@ -192,8 +192,8 @@ Cong Yu (Chair), Bo Ma, Shangfei Liu, Yuhiko Aoyama, Wei Zhong, Qiang Hou, Zhent
 <div class="container">
 <footer class="text-center footer">
   <hr />
-  <h6 class="text-center extra-footer">Reach us at <a href="mailto:mailto:epf2025@163.com">epf2025@163.com</a></h6>
   <h6 class="text-center copyright">© 2025 - School of Physics and Astronomy, Sun Yat-sen University</h6> 
+  <h6 class="text-center extra-footer">Reach us at <a href="mailto:mailto:epf2025@163.com">epf2025@163.com</a> &nbsp;|&nbsp; Based on the template by <a href="https://github.com/mikepierce">Mike Pierce</a> </h6>
 </footer>
 </div>
 <!-- 脚注 -->
