--- a/report_poster/index.html
+++ b/report_poster/index.html
@@ -99,19 +99,22 @@ Click here to submit
 
 
 <!-- 海报相关 -->
-<h3>Here will show the details about poster.</h3>
+<h3>Poster</h3>
+
+<p>We strongly encourage participants to bring their own printed posters (594mm × 841mm) for display.</p>
+
 <!-- 海报相关 -->
 
 
 
 <!-- 脚注 -->
 <div class="container">
-<footer class="text-center footer">
-  <hr />
-  <h6 class="text-center extra-footer">Reach us at <a href="mailto:mailto:epf2025@163.com">epf2025@163.com</a></h6>
-  <h6 class="text-center copyright">© 2025 - School of Physics and Astronomy, Sun Yat-sen University</h6> 
-</footer>
-</div>
+    <footer class="text-center footer">
+      <hr />
+      <h6 class="text-center copyright">© 2025 - School of Physics and Astronomy, Sun Yat-sen University</h6> 
+      <h6 class="text-center extra-footer">Reach us at <a href="mailto:mailto:epf2025@163.com">epf2025@163.com</a> &nbsp;|&nbsp; Based on the template by <a href="https://github.com/mikepierce">Mike Pierce</a> </h6>
+    </footer>
+    </div>
 <!-- 脚注 -->
 
 <!-- 末脚本 -->
