--- a/registration/index.html
+++ b/registration/index.html
@@ -68,12 +68,19 @@
 <!-- 主内容 -->
 <h2>Registration Fee</h2>
 
-<p>The following registration fee applies:</p>
+<p>Early Bird Registration (Before July 15):</p>
 
 <ul class="list">
-  <li class="list">CNY , for students;</li>
-  <li class="list">CNY , for others.</li>
+  <li class="list">CNY , 1000 for students;</li>
+  <li class="list">CNY , 1500 for others.</li>
 </ul>
+
+<p>Standard Registration (After July 15):</p>
+
+<ul class="list">
+    <li class="list">CNY , 1500 for students;</li>
+    <li class="list">CNY , 2000 for others.</li>
+  </ul>
 
 <p>For people who have Alipay or WeChat Pay set up, please scan the following QR code to complete the payment. Descriptions about the payment page are provided below for people who cannot read Chinese.</p>
 
@@ -235,23 +242,24 @@ Click here to submit
 </div>
 
 <!-- 日期提醒 -->
-<h2 style="color: gray;">Pre-registration: </h2>
-<h2 style="color: gray;">Abstract Submission: </h2>
-<h2 style="color: gray;">Formal Registration: </h2>
+<h2 style="color: gray;">Early Bird Registration: April 15 (0420) - July 15 (0715), 2025</h2>
+<h2 style="color: gray;">Standard Registration:July 15 (0715) - August 10 (0810), 2025</h2>
+<h2 style="color: gray;">Abstract Submission Deadline: August 10, 2025</h2>
+
 <!-- 日期提醒 -->
 
 <!-- 主内容 -->
 
- 
+
 
 <!-- 脚注 -->
 <div class="container">
-<footer class="text-center footer">
-  <hr />
-  <h6 class="text-center extra-footer">Reach us at <a href="mailto:mailto:epf2025@163.com">epf2025@163.com</a></h6>
-  <h6 class="text-center copyright">© 2025 - School of Physics and Astronomy, Sun Yat-sen University</h6> 
-</footer>
-</div>
+    <footer class="text-center footer">
+      <hr />
+      <h6 class="text-center copyright">© 2025 - School of Physics and Astronomy, Sun Yat-sen University</h6> 
+      <h6 class="text-center extra-footer">Reach us at <a href="mailto:mailto:epf2025@163.com">epf2025@163.com</a> &nbsp;|&nbsp; Based on the template by <a href="https://github.com/mikepierce">Mike Pierce</a> </h6>
+    </footer>
+    </div>
 <!-- 脚注 -->
 
 <!-- 末脚本 -->
