--- a/logistics/index.html
+++ b/logistics/index.html
@@ -39,7 +39,7 @@
 </div>
 
 <div class="bottom-right"> August 25-28, 2025, Lijiang, Yunnan </div>
-</div> 
+</div>
 <!-- 主标题 -->
 
 
@@ -235,14 +235,14 @@
 
 <!-- 脚注 -->
 <div class="container">
-<footer class="text-center footer">
-  <hr />
-  <h6 class="text-center extra-footer">Reach us at <a href="mailto:mailto:epf2025@163.com">epf2025@163.com</a></h6>
-  <h6 class="text-center copyright">© 2025 - School of Physics and Astronomy, Sun Yat-sen University</h6> 
-</footer>
-</div>
+    <footer class="text-center footer">
+      <hr />
+      <h6 class="text-center copyright">© 2025 - School of Physics and Astronomy, Sun Yat-sen University</h6> 
+      <h6 class="text-center extra-footer">Reach us at <a href="mailto:mailto:epf2025@163.com">epf2025@163.com</a> &nbsp;|&nbsp; Based on the template by <a href="https://github.com/mikepierce">Mike Pierce</a> </h6>
+    </footer>
+    </div>
 <!-- 脚注 -->
- 
+
 <!-- 末脚本 -->
 <script type="application/javascript">
 var doNotTrack = false;
