--- a/program/index.html
+++ b/program/index.html
@@ -73,12 +73,12 @@
 
 <!-- 脚注 -->
 <div class="container">
-<footer class="text-center footer">
-  <hr />
-  <h6 class="text-center extra-footer">Reach us at <a href="mailto:mailto:epf2025@163.com">epf2025@163.com</a></h6>
-  <h6 class="text-center copyright">© 2025 - School of Physics and Astronomy, Sun Yat-sen University</h6> 
-</footer>
-</div>
+    <footer class="text-center footer">
+      <hr />
+      <h6 class="text-center copyright">© 2025 - School of Physics and Astronomy, Sun Yat-sen University</h6> 
+      <h6 class="text-center extra-footer">Reach us at <a href="mailto:mailto:epf2025@163.com">epf2025@163.com</a> &nbsp;|&nbsp; Based on the template by <a href="https://github.com/mikepierce">Mike Pierce</a> </h6>
+    </footer>
+    </div>
 <!-- 脚注 -->
 
 <!-- 末脚本 -->
